Replaced the favicon for the white paper template and fixed the broken nav indicator when it's too tall.

--- a/shared/css/style.less
+++ b/shared/css/style.less
@@ -300,7 +300,7 @@ nav {
       background-position: right;
       background-repeat: no-repeat;
 
-      background-size: 15px;
+      background-size: cover;
       height: 100%;
       width: 15px;
       position: absolute;
